--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+  .country-info {
+    @apply flex flex-col items-center text-lg font-medium text-slate-300;
+  }
+  /* .country-value {
+    @apply flex flex-col items-center text-lg font-medium text-slate-300;
+  }
+  .country-name {
+    @apply flex flex-col items-center text-xl font-medium text-slate-100;
+  } */
+  .svg {
+    @apply border-2 border-black;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.country-name {
+  color: "white";
 }
